--- a/work.html
+++ b/work.html
@@ -106,6 +106,31 @@
             <i class="fab fa-github"></i> Github
           </a> -->
         </div>
+
+        <div class="item">
+          <a href="https://goo.gl/NHQn2a">
+            <img src="img/projects/snake-game.jpg" alt="Project" />
+          </a>
+          <a href="https://goo.gl/NHQn2a" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a href="https://goo.gl/NHQn2a" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="https://goo.gl/6tvoAd">
+            <img src="img/projects/flappy-bird.jpg" alt="Project" />
+          </a>
+          <a href="https://goo.gl/6tvoAd" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a href="https://goo.gl/6tvoAd" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
         <div class="item">
           <a href="https://goo.gl/jNCHHw">
             <img src="img/projects/chat-app.jpg" alt="Project" />
