--- a/work.html
+++ b/work.html
@@ -74,71 +74,110 @@
           </a> -->
         </div>
         <div class="item">
-          <a href="https://bit.ly/2Abiqa8">
+          <a href="https://github.com/hjain5164/Basic-Android-Projects">
             <img src="img/projects/android.jpg" alt="Project" />
           </a>
-          <a href="https://bit.ly/2Abiqa8" class="btn-light">
+          <a
+            href="https://github.com/hjain5164/Basic-Android-Projects"
+            class="btn-light"
+          >
             <i class="fas fa-eye"></i> Project
           </a>
-          <a href="https://bit.ly/2Abiqa8" class="btn-dark">
+          <a
+            href="https://github.com/hjain5164/Basic-Android-Projects"
+            class="btn-dark"
+          >
             <i class="fab fa-github"></i> Github
           </a>
         </div>
         <div class="item">
-          <a href="https://goo.gl/9YkaMg">
+          <a href="https://github.com/hjain5164/Student_Management_System">
             <img src="img/projects/java-project.jpg" alt="Project" />
           </a>
-          <a href="https://goo.gl/9YkaMg" class="btn-light">
+          <a
+            href="https://github.com/hjain5164/Student_Management_System"
+            class="btn-light"
+          >
             <i class="fas fa-eye"></i> Project
           </a>
-          <a href="https://goo.gl/9YkaMg" class="btn-dark">
+          <a
+            href="https://github.com/hjain5164/Student_Management_System"
+            class="btn-dark"
+          >
             <i class="fab fa-github"></i> Github
           </a>
-        </div>
-        <div class="item">
-          <a href="http://brainwaveclasses.in/">
-            <img src="img/projects/static-project.jpg" alt="Project" />
-          </a>
-          <a href="http://brainwaveclasses.in/" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <!-- <a href="#" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a> -->
         </div>
 
         <div class="item">
-          <a href="https://goo.gl/NHQn2a">
+          <a href="https://github.com/hjain5164/Snake-Game-Using-Javascript">
             <img src="img/projects/snake-game.jpg" alt="Project" />
           </a>
-          <a href="https://goo.gl/NHQn2a" class="btn-light">
+          <a
+            href="https://github.com/hjain5164/Snake-Game-Using-Javascript"
+            class="btn-light"
+          >
             <i class="fas fa-eye"></i> Project
           </a>
-          <a href="https://goo.gl/NHQn2a" class="btn-dark">
+          <a
+            href="https://github.com/hjain5164/Snake-Game-Using-Javascript"
+            class="btn-dark"
+          >
             <i class="fab fa-github"></i> Github
           </a>
         </div>
 
         <div class="item">
-          <a href="https://goo.gl/6tvoAd">
+          <a
+            href="https://github.com/hjain5164/Flappy-Bird-Game-using-Javascript"
+          >
             <img src="img/projects/flappy-bird.jpg" alt="Project" />
           </a>
-          <a href="https://goo.gl/6tvoAd" class="btn-light">
+          <a
+            href="https://github.com/hjain5164/Flappy-Bird-Game-using-Javascript"
+            class="btn-light"
+          >
             <i class="fas fa-eye"></i> Project
           </a>
-          <a href="https://goo.gl/6tvoAd" class="btn-dark">
+          <a
+            href="https://github.com/hjain5164/Flappy-Bird-Game-using-Javascript"
+            class="btn-dark"
+          >
             <i class="fab fa-github"></i> Github
           </a>
         </div>
 
         <div class="item">
-          <a href="https://goo.gl/jNCHHw">
-            <img src="img/projects/chat-app.jpg" alt="Project" />
+          <a href="https://github.com/hjain5164/Punch-Bag-Game">
+            <img src="img/projects/punchbag-game.jpg" alt="Project" />
           </a>
-          <a href="https://goo.gl/jNCHHw" class="btn-light">
+          <a
+            href="https://github.com/hjain5164/Punch-Bag-Game"
+            class="btn-light"
+          >
             <i class="fas fa-eye"></i> Project
           </a>
-          <a href="https://goo.gl/gnpaGb" class="btn-dark">
+          <a
+            href="https://github.com/hjain5164/Punch-Bag-Game"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="https://github.com/hjain5164/Chit-Chatz-App">
+            <img src="img/projects/chat-app.jpg" alt="Project" />
+          </a>
+          <a
+            href="https://github.com/hjain5164/Chit-Chatz-App"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a
+            href="https://github.com/hjain5164/Chit-Chatz-App"
+            class="btn-dark"
+          >
             <i class="fab fa-github"></i> Github
           </a>
         </div>
