--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:200,100,400"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <title>Harsh Jain's Portfolio</title>
   </head>
@@ -45,8 +49,13 @@
     <main id="home">
       <h1 class="lg-heading">Harsh <span class="text-secondary">Jain</span></h1>
       <h2 class="sm-heading">
-        Web Developer, Android App Developer, Programmer
-        <span class="text-secondary">&</span> Machine Learning Enthusiast
+        <span
+          class="txt-rotate"
+          data-period="2000"
+          data-rotate='["Web Developer","Android Developer","Machine Learning Enthusiast",
+        "Blockchain Learner"]'
+        >
+        </span>
       </h2>
       <div class="icons">
         <a href="https://www.facebook.com/harsh12358">
